compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__alias_constant.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport rocket_ship as boop\npub fn go() { boop.x }\n"
---
module rec my.``mod``
module boop = rocket_ship

let go () = begin
    rocket_ship.x
end
