compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__different_package_import.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "import one\npub fn go() { one.go() }\n"
---
module rec my.``mod``
open other_package
let go () = begin
    one.go()
end
