compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__discarded_duplicate_import_with_unqualified.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship.{go} as _nasa_rocket\npub fn esa_go() { rocket_ship.go() }\npub fn nasa_go() { go() }\n"
---
module rec my.``mod``
let go = nasa.rocket_ship.go
let esa_go () = begin
    esa.rocket_ship.go()
end
let nasa_go () = begin
    go()
end
