compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__import_with_keyword.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport rocket_ship.{class, in as while}\npub fn go() {\n  #(class, while)\n}\n"
---
module rec my.``mod``
let ``class`` = rocket_ship.``class``
let ``while`` = rocket_ship.``in``
let go () = begin
    (``class``, ``while``)
end
