compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__nested_fn_call.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "import one/two\npub fn go() { two.go() }"
---
module rec my.``mod``

let go () = begin
    one.two.go()
end
