compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__unqualified_fn_call.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "import rocket_ship.{launch}\npub fn go() { launch() }\n"
---
module rec my.``mod``
let launch = rocket_ship.launch

let go () = begin
    launch()
end
